@startuml
skinparam classAttributeIconSize 0

package com.nativecloud.sync {

  class NextcloudNativeClient {
    +upload(localPath: String, remoteUrl: String, username: String, password: String): int
    +listFolders(url: String, username: String, password: String): List<String>
    +joinPaths(base: String, path: String): String
    +encodePathComponent(path: String): String
    +encodeFullRemotePath(path: String): String
  }

  class FolderResource {
    +getFolders(baseUrl: String, user: String, pass: String): Response
  }

  class FolderWatcher {
    -watchFolder(): void
    -uploadToNextcloud(filePath: Path): void
    +onStart(): void
  }

  NextcloudNativeClient <.. FolderResource : <<inject>>
  NextcloudNativeClient <.. FolderWatcher : <<inject>>
}

@enduml
